--- a/signsingle.html
+++ b/signsingle.html
@@ -89,7 +89,7 @@
             sigTextField.style.display = "block";
             sigContainer.style.display = "block";
 
-            sigContainer.innerText = bufferToHex(await signature)
+            sigContainer.innerText = await signature
 
         }
 
