--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -128,7 +128,7 @@
             for (let index = 0; index < userList.length; index++) {
                 name = userList[index].name;
                 socketchoice = userList[index].socketid
-                document.getElementById("pubKeyDisplay").innerHTML += "<div id="+socketchoice+ "" + " class=\"joinedNames\">" +  randomEmoji() + name + "</div>" //carry emojis serverside
+                document.getElementById("pubKeyDisplay").innerHTML += "<div id="+socketchoice+ "" + " class=\"joinedNames\">" + name + "</div>" //carry emojis serverside
                 if (userList[index].readyStatus == true) {
                     document.getElementById(socketchoice).innerText += "✔️"
                 }
@@ -165,7 +165,7 @@
         })
 
         function getName() {
-            yourName = document.getElementById("nameEntry").value;
+            yourName = randomEmoji() + " " + document.getElementById("nameEntry").value;
             setUsername(yourName, randomroom)
             document.getElementById("nameContainer").remove()
             document.getElementById("buttonboxmain").style.display = "none"
