--- a/join.html
+++ b/join.html
@@ -91,7 +91,7 @@
             for (let index = 0; index < userList.length; index++) {
                 name = userList[index].name;
                 socketchoice = userList[index].socketid
-                document.getElementById("pubKeyDisplay").innerHTML += "<div id="+socketchoice+ "" + " class=\"joinedNames\">" +  randomEmoji() + name + "</div>" //carry emojis serverside
+                document.getElementById("pubKeyDisplay").innerHTML += "<div id="+socketchoice+ "" + " class=\"joinedNames\">" + name + "</div>" //carry emojis serverside
                 if (userList[index].readyStatus == true) {
                     document.getElementById(socketchoice).innerText += "✔️"
                 }
@@ -120,7 +120,7 @@
         })
         
         function getName() {
-            var yourName = document.getElementById("nameEntry").value;
+            yourName = randomEmoji() + " " + document.getElementById("nameEntry").value;
             setUsername(yourName, chosenRoom)
             document.getElementById("nameContainer").remove()
             getUsers()
